Support file names with spaces